# terrance

./: .gitmodules  Cargo.toml  Justfile  README.md
.github/actions/pre-test/: action.yaml  run.sh
.github/workflows/: ci.yaml  pre-tests.yaml
examples/: step_manager_example.rs
src/: error.rs  lib.rs  main.rs  steps.rs
src/commands/: config.rs  github.rs  mod.rs  project.rs
src/config/: encryption.rs  keychain.rs  manager.rs  mod.rs  one_password.rs  types.rs
src/github/: client.rs  mod.rs
src/scaffold/: mod.rs
