[package]
name = "terrance"
version = "0.1.0"
edition = "2024"

[lib]
name = "terrance"
crate-type = ["rlib"]

[[bin]]
name = "terry"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
thiserror = "2.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

# Encryption
aes-gcm = "0.10"
rand = "0.8"

# Keychain
keyring = "2.3"
base64 = "0.21"
